--- a/date/2025-05/page-4.htm
+++ b/date/2025-05/page-4.htm
@@ -110,6 +110,71 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-05-03">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-5-3-node-share.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/fc8c592510f04d04d9f99cdf3ce8408d.webp" alt="「5月3日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-5-3-node-share.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「5月3日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、日本、韩国、加拿大、美国、新加坡、欧洲等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-05-02">
+                                <div class="col-md-3">
+                                    <a href="/news/article-109807.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/556b5dbcfe6584f0352cb6fadde73408.webp" alt="使用etcd选举sdk实践master/slave故障转移_在线工具" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-109807.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">使用etcd选举sdk实践master/slave故障转移_在线工具</h3>
+                                    </a>
+                                    <p>本次将记录[利用etcd选主sdk实践master/slave高可用]， 并利用etcdctl原生脚本验证选主sdk的工作原理。 master/slave高可用集群 本文目标 在异地多机房部署节点，s</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-05-02">
+                                <div class="col-md-3">
+                                    <a href="/news/article-109805.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/cc523ed9277a0375a6331d5674ef34dc.webp" alt="[DEBUG] QAT Nginx for docker 部署时&#8221;&#8211;with-ld-opt&#8221;出错" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-109805.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">[DEBUG] QAT Nginx for docker 部署时&#8221;&#8211;with-ld-opt&#8221;出错</h3>
+                                    </a>
+                                    <p>layout: post title: [DEBUG] QAT Nginx for docker 部署时"--with-ld-opt"出错 subtitle: 记一次debug经历 tags: [de</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-05-02">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-5-2-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/fc8c592510f04d04d9f99cdf3ce8408d.webp" alt="「5月2日」最高速度19.3M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-5-2-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「5月2日」最高速度19.3M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、韩国、香港、日本、加拿大、欧洲、新加坡等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-05-01">
+                                <div class="col-md-3">
+                                    <a href="/news/article-108967.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/8be83b8774f88a8347879125816b5e62.webp" alt="动物疫苗定义是什么 动物疫苗定义是什么意思" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-108967.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">动物疫苗定义是什么 动物疫苗定义是什么意思</h3>
+                                    </a>
+                                    <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗定义是什么的问题，于是小编就整理了3个相关介绍动物疫苗定义是什么的解答，让我们一起看看吧。6个月大的狗怎么打疫苗?打什么</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-05-01">
                                 <div class="col-md-3">
                                     <a href="/news/article-108966.htm" class="xcblog-blog-url">
@@ -146,16 +211,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-97187.htm" title="牲畜打疫苗完成的简报内容（牲畜注射疫苗简报）">牲畜打疫苗完成的简报内容（牲畜注射疫苗简报）</a></li>
-                        <li class="py-2"><a href="/news/article-96498.htm" title="南京农大动物医院有限责任公司（南京农业大学动物医学院地址）">南京农大动物医院有限责任公司（南京农业大学动物医学院地址）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-23-free-node-subscribe.htm" title="「4月23日」最高速度22.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「4月23日」最高速度22.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-20-free-node-subscribe.htm" title="「4月20日」最高速度18.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「4月20日」最高速度18.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-16-free-v2ray.htm" title="「5月16日」最高速度20.7M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「5月16日」最高速度20.7M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-95773.htm" title="猫三联要隔多久打一针（猫三联要隔多久打一针才有效）">猫三联要隔多久打一针（猫三联要隔多久打一针才有效）</a></li>
-                        <li class="py-2"><a href="/news/article-86159.htm" title="DecimalFormat保留小数位">DecimalFormat保留小数位</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-24-free-v2ray-subscribe.htm" title="「5月24日」最高速度20.5M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「5月24日」最高速度20.5M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-13-free-subscribe-node.htm" title="「5月13日」最高速度19.8M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月13日」最高速度19.8M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-86866.htm" title="java中通过es搜索数据">java中通过es搜索数据</a></li>
+                        <li class="py-2"><a href="/news/article-92733.htm" title="1元一件地摊货500批发（1元一件地摊货500批发中老年女）">1元一件地摊货500批发（1元一件地摊货500批发中老年女）</a></li>
+                        <li class="py-2"><a href="/news/article-90929.htm" title="同安宠物领养中心在哪里有（同安宠物领养中心在哪里有啊）">同安宠物领养中心在哪里有（同安宠物领养中心在哪里有啊）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-29-node-share.htm" title="「4月29日」最高速度22.1M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「4月29日」最高速度22.1M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-100205.htm" title="【面试普通人VS高手系列】volatile关键字有什么用？它的实现原理是什么？_在线工具">【面试普通人VS高手系列】volatile关键字有什么用？它的实现原理是什么？_在线工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-26-free-node-subscribe.htm" title="「4月26日」最高速度18M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「4月26日」最高速度18M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-108967.htm" title="动物疫苗定义是什么 动物疫苗定义是什么意思">动物疫苗定义是什么 动物疫苗定义是什么意思</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-28-free-v2ray.htm" title="「4月28日」最高速度19.6M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「4月28日」最高速度19.6M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-98637.htm" title="1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）">1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm" title="「4月4日」最高速度19.3M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「4月4日」最高速度19.3M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-108155.htm" title="猫抓了一下有红色痕迹（猫抓了一下有点红印有没有问题）">猫抓了一下有红色痕迹（猫抓了一下有点红印有没有问题）</a></li>
                     </ul>
     </div>
 </div>
@@ -167,7 +232,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">37</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
