--- a/free-nodes/page-6.htm
+++ b/free-nodes/page-6.htm
@@ -107,6 +107,71 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-08">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-8-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-8-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、新加坡、香港、美国、韩国、日本、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-07">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「4月7日」最高速度20M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月7日」最高速度20M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、韩国、欧洲、加拿大、新加坡、美国、日本等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-06">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-6-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「4月6日」最高速度22.9M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-6-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月6日」最高速度22.9M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了新加坡、欧洲、韩国、加拿大、日本、美国、香港等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-05">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-5-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/6bd468ee81514cc7f73ce3590652082a.webp" alt="「4月5日」最高速度22M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-5-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月5日」最高速度22M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、日本、新加坡、韩国、欧洲、加拿大、美国等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-04">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/ba2d5a03aaf72b56501b25c1e174249b.webp" alt="「4月4日」最高速度19.3M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月4日」最高速度19.3M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、韩国、日本、新加坡、美国、加拿大、欧洲等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-04-03">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -156,16 +221,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-103203.htm" title="无货源开网店真能轻松挣到钱吗是真的吗?（无货源开网店真能轻松挣到钱吗是真的吗知乎）">无货源开网店真能轻松挣到钱吗是真的吗?（无货源开网店真能轻松挣到钱吗是真的吗知乎）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-23-clash-v2ray-ss-ssr.htm" title="「5月23日」最高速度22M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「5月23日」最高速度22M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-19-free-v2ray.htm" title="「5月19日」最高速度20.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「5月19日」最高速度20.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-97962.htm" title="动物疫苗价格表图片高清大图大全 动物疫苗价格表图片高清大图大全集">动物疫苗价格表图片高清大图大全 动物疫苗价格表图片高清大图大全集</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-17-free-high-speed-nodes.htm" title="「5月17日」最高速度18.5M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「5月17日」最高速度18.5M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" title="「4月19日」最高速度20.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「4月19日」最高速度20.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-3-node-share.htm" title="「5月3日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「5月3日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-108966.htm" title="动物医院有公立的吗还是私立的医院 动物医院有公立的吗还是私立的医院好">动物医院有公立的吗还是私立的医院 动物医院有公立的吗还是私立的医院好</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm" title="「4月4日」最高速度19.3M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「4月4日」最高速度19.3M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-107343.htm" title="美联众合动物医院加盟多少钱（美联众合动物医院总部在哪）">美联众合动物医院加盟多少钱（美联众合动物医院总部在哪）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-18-node-share-links.htm" title="「4月18日」最高速度21.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「4月18日」最高速度21.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/news/article-108967.htm" title="动物疫苗定义是什么 动物疫苗定义是什么意思">动物疫苗定义是什么 动物疫苗定义是什么意思</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-5-node-share-links.htm" title="「4月5日」最高速度22M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「4月5日」最高速度22M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-95772.htm" title="成都市宠物狗领养平台官网电话（成都宠物狗领养吧）">成都市宠物狗领养平台官网电话（成都宠物狗领养吧）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-13-free-subscribe-node.htm" title="「5月13日」最高速度19.8M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月13日」最高速度19.8M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-20-free-high-speed-nodes.htm" title="「5月20日」最高速度19.4M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「5月20日」最高速度19.4M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-101590.htm" title="牛羊兽药批发网（牛羊兽药做的最好的公司）">牛羊兽药批发网（牛羊兽药做的最好的公司）</a></li>
+                        <li class="py-2"><a href="/news/article-108155.htm" title="猫抓了一下有红色痕迹（猫抓了一下有点红印有没有问题）">猫抓了一下有红色痕迹（猫抓了一下有点红印有没有问题）</a></li>
+                        <li class="py-2"><a href="/news/article-105523.htm" title="什么电脑单机游戏好玩不吃配置(玩不腻的电脑单机)">什么电脑单机游戏好玩不吃配置(玩不腻的电脑单机)</a></li>
                     </ul>
     </div>
 </div>
@@ -177,7 +242,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">37</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
